# Timey

./: .gitignore  .gitmodules  CMakeLists.txt  Timey.sln  premake5.lua  vendor - Shortcut.lnk
TimeyApplication/: CMakeLists.txt  TimeyApplication.vcxproj  TimeyApplication.vcxproj.filters  imgui.ini  imgui_log.txt
TimeyApplication/src/: main.cpp  timey_pch.h
TimeyApplication/src/AppCore/: Application.cpp  Application.h  BaseWindow.cpp  BaseWindow.h  main.cpp
TimeyApplication/src/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h  TimeyEvents.h  WindowEvents.h
TimeyApplication/src/Platform/Win32/: Win32Window.cpp  Win32Windows.h
TimeyApplication/src/UI/: ImguiBackend.cpp  ImguiBackend.h  UILayer.cpp  UILayer.h  UIWindows.cpp  UIWindows.h  Windows.cpp  Windows.h
TimeyApplication/test/: TestDbFunctions.h
TimeyCore/: CMakeLists.txt  TimeyCore.vcxproj  TimeyCore.vcxproj.filters
TimeyCore/src/: TimeyCore.h  test.cpp  timey_pch.cpp  timey_pch.h
TimeyCore/src/Core/: FileManager.cpp  FileManager.h  Log.cpp  Log.h  Object.h  TimeyID.cpp  TimeyID.h  TimeyTime.cpp  TimeyTime.h  Utilty.h
TimeyCore/src/Core/DbClasses/: CoreDataBase.cpp  CoreDataBase.h  DBtest.cpp  DataBase.cpp  DataBase.h  GroupDataBase.h  ProjectDataBase.cpp  ProjectDataBase.h  ProjectGroupDataBase.cpp  ProjectGroupDataBase.h  Query.cpp  Query.h  QueryResult.cpp  QueryResult.h  SQL_queries.h  SessionDataBase.cpp  SessionDataBase.h  TagDataBase.cpp  TagDataBase.h  TagGroupDataBase.cpp  TagGroupDataBase.h
TimeyCore/src/Tests/: IntegrationTest.cpp  IntegrationTest.h
TimeyCore/tests/: IntegrationTest.h
tmp/: create_table.txt  insert_test.txt  test.db  update_test.txt
